# daily-digest

./: README.md  pyproject.toml
.github/workflows/: daily-digest.yml
docs/: daily-digest.md
scripts/: digest.py
tests/: test_slack_formatting.py
