[project]
name = "daily-digest"
version = "0.1.0"
description = "Daily Narrative Digest"
requires-python = ">=3.11"
dependencies = [
  "loguru>=0.7.2",
  "openai>=1.40.0",
  "pylint>=3.2.7",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "python-dotenv>=1.0.1",
  "pyright>=1.1.380",
  "requests>=2.31.0",
  "ruff>=0.6.9",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]

[tool.pylint.MASTER]
ignore-paths = [".venv"]

[tool.pylint.MESSAGES_CONTROL]
enable = ["R0801", "R0914"]
